# project-tessera

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  ROADMAP.md  glama.json  main.py  mcp_server.py  pyproject.toml  smithery.yaml  workspace.yaml.example
.github/workflows/: publish.yml  test.yml
data/sample/: README.md
extension/: background.js  content.css  content.js  manifest.json  popup.html  popup.js
recipes/: auto_capture.yaml  extract_and_save.yaml
scripts/: integrity_check.py
src/: adapters.py  api_auth.py  auto_curator.py  auto_extract.py  auto_insight.py  chatgpt_actions.py  cli.py  config.py  consolidation.py  context_primer.py  context_window.py  contradiction.py  conversation_import.py  core.py  cross_ai.py  dashboard.py  decision_tracker.py  embedding.py  entity_extraction.py  entity_store.py  export_formats.py  file_watcher.py  freshness.py  hooks.py  http_server.py  interaction_log.py  knowledge_graph.py  knowledge_stats.py  memory.py  memory_confidence.py  memory_health.py  migrate.py  multi_angle.py  organizer.py  prd_auditor.py  project_spaces.py  project_status.py  provenance.py  quiet_curation.py  rate_limiter.py  (+15 more)
src/companion/: __init__.py  install.py  notifier.py  persona.py  scheduler.py  tray.py
src/graph/: __init__.py  vector_store.py
src/ingestion/: csv_parser.py  docx_parser.py  image_parser.py  markdown_parser.py  metadata_extractor.py  pdf_parser.py  pipeline.py  session_parser.py  text_parser.py  xlsx_parser.py
src/primitives/: __init__.py  analysis_primitives.py  llm_primitives.py  memory_primitives.py  registry.py  search_primitives.py
src/recipes/: __init__.py  context.py  loader.py  models.py  runner.py
tests/: conftest.py  test_adapters.py  test_api_auth.py  test_auto_curator.py  test_auto_extract.py  test_auto_insight.py  test_auto_learn.py  test_batch_api.py  test_chatgpt_actions.py  test_config.py  test_consolidation.py  test_context_primer.py  test_context_window.py  test_contradiction.py  test_conversation_import.py  test_cors_openapi.py  test_cross_ai.py  test_dashboard.py  test_decision_tracker.py  test_entity_extraction.py  test_entity_graph.py  test_entity_store.py  test_export_formats.py  test_extension.py  test_file_watcher.py  test_freshness.py  test_hardening.py  test_highlight.py  test_hooks.py  test_http_server.py  test_image_parser.py  test_interaction_log.py  test_knowledge_graph.py  test_knowledge_stats.py  test_mcp_validation.py  test_memory.py  test_memory_batch.py  test_memory_categories.py  test_memory_confidence.py  test_memory_dedup.py  (+34 more)
