[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-tessera"
version = "0.6.5"
description = "Tessera — Personal Knowledge Layer for AI. Own your memory across every AI tool."
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Jae-seong Jeong", email = "bessl.framework@gmail.com" },
]
readme = "README.md"
keywords = ["rag", "mcp", "claude", "knowledge-base", "vector-search", "local"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "llama-index-core>=0.12.0",
    "lancedb>=0.17.0",
    "fastembed>=0.7.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]
docx = [
    "python-docx>=1.0.0",
]
xlsx = [
    "openpyxl>=3.1.0",
]
pdf = [
    "pymupdf>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/besslframework-stack/project-tessera"
Repository = "https://github.com/besslframework-stack/project-tessera"
Issues = "https://github.com/besslframework-stack/project-tessera/issues"

[project.scripts]
tessera = "src.cli:cli"
tessera-mcp = "mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src" = ["*.py"]

[tool.setuptools]
py-modules = ["mcp_server", "main"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
